tests/ui/compile-flags/invalid/pgo-sample-use-and-instrument-use-conflicting-flags.rs
//@ compile-flags: -C profile-sample-use=path -C profile-use=path
//~? ERROR option `-C profile-sample-use` cannot be used with `-C profile-generate` or `-C profile-use`
